# touchgrass

./: .gitignore  Makefile  README.md  ROADMAP.md  config.example.yaml
app/: App.tsx  app.json  eslint.config.js  package-lock.json  package.json
app/src/api/: client.ts  types.ts  ws.ts
app/src/auth/: pin.ts  useLockState.tsx
app/src/components/: NewSessionSheet.tsx  PermissionSheet.tsx  PinDots.tsx  PinKeypad.tsx  StatusBadge.tsx
app/src/lib/: deepLink.ts  time.ts
app/src/navigation/: Root.tsx  types.ts
app/src/screens/: ChatScreen.tsx  FileSummaryScreen.tsx  FileTreeScreen.tsx  PinEntryScreen.tsx  PinGateScreen.tsx  PinSetScreen.tsx  ProjectsScreen.tsx  SessionsScreen.tsx  SettingsScreen.tsx
app/src/storage/: config.ts
app/src/theme/: index.ts
daemon/: README.md  pyproject.toml
daemon/postman/: touchgrass.postman_collection.json
daemon/src/touchgrass_daemon/: __main__.py  changelog.py  config.py  events.py  files.py  notifications.py  permissions.py  runner.py  summaries.py
daemon/src/touchgrass_daemon/api/: __init__.py  app.py  auth.py  hub.py  state.py
daemon/src/touchgrass_daemon/api/routes/: files.py  permissions.py  projects.py  sessions.py  streams.py
daemon/src/touchgrass_daemon/prompts/: session_summary.md
daemon/src/touchgrass_daemon/store/: __init__.py  migrations.py  models.py  store.py
daemon/src/touchgrass_daemon/store/migrations/: 0001_initial.sql  0002_file_summaries.sql
daemon/tests/: test_api.py  test_changelog.py  test_config.py  test_files.py  test_files_api.py  test_notifications.py  test_permissions.py  test_runner.py  test_store.py
