[project]
name = "touchgrass-daemon"
version = "0.0.0"
description = "Headless daemon that wraps Claude Code SDK and exposes it over WebSocket+REST for remote control from a phone."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
dependencies = []

[project.scripts]
touchgrass-daemon = "touchgrass_daemon.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/touchgrass_daemon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
